# yieldera

./: .gitmodules  README.md
backend/: .env.exemple  .gitignore  Cargo.toml
backend/src/: main.rs  state.rs  types.rs
backend/src/abi/: YielderaVault.json
backend/src/api/: mod.rs
backend/src/config/: mainnet.toml  mod.rs  testnet.toml
backend/src/core/: coingecko.rs  csv_logger.rs  email.rs  init.rs  mod.rs  vault.rs  vault_spawn.rs
backend/src/helpers/: mod.rs  vault.rs
backend/src/helpers/math/: mod.rs
backend/src/helpers/math/uniswap_v3/: error.rs  full_math.rs  liquidity_math.rs  mod.rs  sqrt_price_math.rs  tick_math.rs  unsafe_math.rs
backend/src/strategies/: ai.rs  basic.rs  mod.rs
contracts/: .env.exemple  foundry.toml  remappings.txt
contracts/script/: DeployYielderaVault.s.sol
contracts/src/: YielderaVault.sol
contracts/src/interfaces/: IExchangeRate.sol  IHederaTokenService.sol  INonfungiblePositionManager.sol  IPeripheryPayments.sol  IUniswapV3Factory.sol  IWhbarHelper.sol
contracts/src/libraries/: AssociateHelper.sol  FullMath.sol  HbarConversion.sol  LiquidityAmounts.sol  OracleLibrary.sol  TickMath.sol  TransferHelper.sol  UV3Math.sol
frontend/: .env.example  .env.production.example  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  AppRouter.tsx  index.tsx
frontend/src/components/: ArchitectureSection.tsx  CallToAction.tsx  ErrorBoundary.tsx  FAQ.tsx  (+13 more)
mcp/: Cargo.toml
mcp/src/: config.rs  main.rs
mcp/src/tools/: balance.rs  bonzo.rs  calculator.rs  mod.rs
(+41 files in other folders)
